# michaels-node-win-app-github

./: .gitignore  CMakeLists.txt  CoreStationHXAgent.service  README.md  app.aps  app.rc  app.res  build.bat  build.sh  build1.bat  ps.bat  sign.bat  start.ps1  stop.ps1  version.aps
debian/: changelog  clean  control  copyright  files  postinst  postrm  prerm  rules
installer/: install.ps1  release-notes.txt  remove.ps1
src/: LinuxPlatform.cpp  MetricCache.h  Platform.h  SystemState.h  WindowsPlatform.cpp  Windows_Addon.h  main.cpp  version.h
